<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#FF001577"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:text="@string/frag1"/>
    
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/a1"
                android:src="@drawable/img1"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/a2"
                android:src="@drawable/img2"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/a3"
                android:src="@drawable/img1"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/a4"
                android:src="@drawable/img4"/>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>