<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#FF001577"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:text="@string/loginheader" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical"
        >
        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/emailinput"
            />
        <EditText
            android:id="@+id/emailinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:minHeight="50sp"
            android:layout_marginBottom="30dp"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/passwordinput"
            />
        <EditText
            android:id="@+id/passwordinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:minHeight="50sp"
            android:layout_marginBottom="30dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF001577"
            />


    </LinearLayout>

</LinearLayout>